# agentic-patterns

./: .gitignore  README.md
hierarchical_supervisor_worker/: CLAUDE.md  Makefile  README.md  TODOs.md  pyproject.toml
hierarchical_supervisor_worker/src/: cli.py
hierarchical_supervisor_worker/src/hsw/: __init__.py  config.py  interfaces.py  models.py
hierarchical_supervisor_worker/src/hsw/graph/: roma_graph.py
hierarchical_supervisor_worker/src/hsw/nodes/: __init__.py  aggregator.py  atomizer.py  executor.py  planner.py  roma_node.py
hierarchical_supervisor_worker/src/hsw/prompts/: __init__.py  instructions.py
hierarchical_supervisor_worker/src/hsw/registry/: agent_factory.py  (+1 more)
hierarchical_supervisor_worker/tests/: test_production_suite.py  test_supervisor.py
parallel_agents/: .router_metrics.json  .router_state.json  CLAUDE.md  Makefile  OUTPUT.txt  README.md  pyproject.toml
parallel_agents/docs/: TODOs.md  async_agent_patterns.md
parallel_agents/src/: __init__.py  citations.py  cli.py  factory.py  features.py  instructions.py  judge.py  race.py  routing_linucb.py  streaming.py  types.py
parallel_agents/src/agents/: __init__.py  streaming.py
parallel_agents/src/core/: __init__.py  instructions.py  types.py
parallel_agents/src/judging/: __init__.py  judge.py
parallel_agents/src/race/: __init__.py  race.py
parallel_agents/src/routing/: __init__.py  baseline.py  routing_linucb.py
parallel_agents/src/runtime/: __init__.py  factory.py  metrics.py  reward.py  streaming.py
parallel_agents/src/services/: __init__.py  cache_redis.py  state_redis.py
parallel_agents/src/utils/: __init__.py  citations.py  cli.py
parallel_agents/tests/: conftest.py  test_citations.py  test_factory.py  test_judge.py  test_race.py  test_routing_linucb.py  test_streaming.py
(+7 files in other folders)
